--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@ limitations under the License.
     firebase.initializeApp(config);
   </script>
 
-  
+
   <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 
   <link rel="stylesheet" href="main.css">
@@ -150,12 +150,14 @@ limitations under the License.
       // [END authstatelistener]
       document.getElementById('quickstart-sign-in').addEventListener('click', toggleSignIn, false);
     }
-
-    function writeUserData() {
-      console.log("writing user data...")
-      firebase.database().ref('users/').set({
-        randomShit: "here is some random shit"
-      });
+    function writeUserEmailData() {
+      console.log("writing user datagmfdlkg...")
+      var user = firebase.auth().currentUser;
+      if (user) {
+        firebase.database().ref('users/' + user.uid).set({
+          requirements: 543543543
+        });
+      }
     }
 
     window.onload = function() {
@@ -189,7 +191,7 @@ limitations under the License.
           <!-- Button that handles sign-in/sign-out -->
           <button disabled class="mdl-button mdl-js-button mdl-button--raised" id="quickstart-sign-in">Sign in with Google</button>
 
-          <button id="database_test" onclick="writeUserData();">database test</button>
+          <button id="database_test" onclick="writeUserEmailData();">database test</button>
 
           <!-- Container where we'll display the user details -->
           <div class="quickstart-user-details-container">
