--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@ limitations under the License.
 <head>
   <meta charset=utf-8 />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Google Sign In Example</title>
+  <title>Candidate Tracker</title>
 
   <!-- Material Design Theming -->
   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
@@ -99,6 +99,7 @@ limitations under the License.
         }
         // The signed-in user info.
         var user = result.user;
+
       }).catch(function(error) {
         // Handle Errors here.
         var errorCode = error.code;
@@ -140,6 +141,7 @@ limitations under the License.
           //   document.getElementById('special_number').textContent = snapshot.val();
           // });
           // [END_EXCLUDE]
+          queryDatabase();
         } else {
           // User is signed out.
           // [START_EXCLUDE]
@@ -155,6 +157,7 @@ limitations under the License.
       });
       // [END authstatelistener]
       document.getElementById('quickstart-sign-in').addEventListener('click', toggleSignIn, false);
+
     }
     function writeUserEmailData() {
       console.log("writing user datagmfdlkg...")
@@ -199,7 +202,7 @@ limitations under the License.
   <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
     <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
       <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
-        <a href="/"><h3>Firebase Authentication</h3></a>
+        <h3>Tracker</h3>
       </div>
     </div>
   </header>
@@ -210,7 +213,7 @@ limitations under the License.
       <!-- Container for the demo -->
       <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
         <div class="mdl-card__title mdl-color--light-blue-600 mdl-color-text--white">
-          <h2 class="mdl-card__title-text">Google Authentication with Redirect</h2>
+          <h2 class="mdl-card__title-text"></h2>
         </div>
         <div class="mdl-card__supporting-text mdl-color-text--grey-600">
           <p>Sign in with your Google account below.</p>
