--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,176 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+		<script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
+
+			<script>
+			    // Initialize Firebase
+			    var config = {
+			      apiKey: "AIzaSyDabYfBxOCRUizOOn1eiyimxmdv0Bmr13Q",
+			      authDomain: "candidatetracker-58223.firebaseapp.com",
+			      databaseURL: "https://candidatetracker-58223.firebaseio.com",
+			      projectId: "candidatetracker-58223",
+			      storageBucket: "candidatetracker-58223.appspot.com",
+			      messagingSenderId: "423650086109"
+			    };
+			    firebase.initializeApp(config);
+			 </script>
+
+			<script src="/__/firebase/5.7.0/firebase-app.js"></script>
+		  <script src="/__/firebase/5.7.0/firebase-auth.js"></script>
+		  <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-auth.js"></script>
+		  <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
+		  <script src="/__/firebase/init.js"></script>
+
+		  <script type="text/javascript">
+		    /**
+		     * Function called when clicking the Login/Logout button.
+		     */
+		    // [START buttoncallback]
+		    function toggleSignIn() {
+		      if (!firebase.auth().currentUser) {
+		        // [START createprovider]
+		        var provider = new firebase.auth.GoogleAuthProvider();
+		        // [END createprovider]
+		        // [START addscopes]
+		        provider.addScope('https://www.googleapis.com/auth/plus.login');
+		        // [END addscopes]
+		        // [START signin]
+		        firebase.auth().signInWithRedirect(provider);
+		        // [END signin]
+		      } else {
+		        // [START signout]
+		        firebase.auth().signOut();
+		        // [END signout]
+		      }
+		      // [START_EXCLUDE]
+		      document.getElementById('quickstart-sign-in').disabled = true;
+		      // [END_EXCLUDE]
+		    }
+		    // [END buttoncallback]
+		    /**
+		     * initApp handles setting up UI event listeners and registering Firebase auth listeners:
+		     *  - firebase.auth().onAuthStateChanged: This listener is called when the user is signed in or
+		     *    out, and that is where we update the UI.
+		     *  - firebase.auth().getRedirectResult(): This promise completes when the user gets back from
+		     *    the auth redirect flow. It is where you can get the OAuth access token from the IDP.
+		     */
+		    function initApp() {
+		      // Result from Redirect auth flow.
+		      // [START getidptoken]
+		      firebase.auth().getRedirectResult().then(function(result) {
+		        if (result.credential) {
+		          // This gives you a Google Access Token. You can use it to access the Google API.
+		          var token = result.credential.accessToken;
+		          // [START_EXCLUDE]
+		          document.getElementById('quickstart-oauthtoken').textContent = token;
+		        } else {
+		          document.getElementById('quickstart-oauthtoken').textContent = 'null';
+		          // [END_EXCLUDE]
+		        }
+		        // The signed-in user info.
+		        var user = result.user;
+
+		      }).catch(function(error) {
+		        // Handle Errors here.
+		        var errorCode = error.code;
+		        var errorMessage = error.message;
+		        // The email of the user's account used.
+		        var email = error.email;
+		        // The firebase.auth.AuthCredential type that was used.
+		        var credential = error.credential;
+		        // [START_EXCLUDE]
+		        if (errorCode === 'auth/account-exists-with-different-credential') {
+		          alert('You have already signed up with a different auth provider for that email.');
+		          // If you are using multiple auth providers on your app you should handle linking
+		          // the user's accounts here.
+		        } else {
+		          console.error(error);
+		        }
+		        // [END_EXCLUDE]
+		      });
+		      // [END getidptoken]
+		      // Listening for auth state changes.
+		      // [START authstatelistener]
+		      firebase.auth().onAuthStateChanged(function(user) {
+		        if (user) {
+		          // User is signed in.
+		          var displayName = user.displayName;
+
+		          document.getElementById("name").textContent = displayName;
+
+		          var email = user.email;
+		          var emailVerified = user.emailVerified;
+		          var photoURL = user.photoURL;
+		          var isAnonymous = user.isAnonymous;
+		          var uid = user.uid;
+		          var providerData = user.providerData;
+		          // [START_EXCLUDE]
+		          // document.getElementById('quickstart-sign-in-status').textContent = 'Signed in';
+		          document.getElementById('quickstart-sign-in').textContent = 'Sign out';
+		          //document.getElementById('quickstart-account-details').textContent = JSON.stringify(user, null, '  ');
+		          var db = firebase.database();
+		          var reqCount = firebase.database().ref('users/' + uid + '/requirements');
+		          // reqCount.on('value', function(snapshot) {
+		          //   document.getElementById('special_number').textContent = snapshot.val();
+		          // });
+		          // [END_EXCLUDE]
+		          queryDatabase();
+		        } else {
+		          // User is signed out.
+		          // [START_EXCLUDE]
+		          // document.getElementById('quickstart-sign-in-status').textContent = 'Signed out';
+		          document.getElementById('quickstart-sign-in').textContent = 'Sign in with Google';
+		          // document.getElementById('quickstart-account-details').textContent = 'null';
+		          // document.getElementById('quickstart-oauthtoken').textContent = 'null';
+		          // [END_EXCLUDE]
+		        }
+		        // [START_EXCLUDE]
+		        document.getElementById('quickstart-sign-in').disabled = false;
+		        // [END_EXCLUDE]
+		      });
+		      // [END authstatelistener]
+		      document.getElementById('quickstart-sign-in').addEventListener('click', toggleSignIn, false);
+
+		    }
+		    function writeUserEmailData() {
+		      console.log("writing user datagmfdlkg...")
+		      var user = firebase.auth().currentUser;
+		      if (user) {
+		        firebase.database().ref('users/' + user.uid).set({
+		          requirements: 543543543,
+		          email: user.email
+		        });
+		      }
+		    }
+
+		    window.onload = function() {
+		      initApp();
+		    };
+		    function queryDatabase() {
+		    	console.log("queried database");
+		        var database = firebase.database();
+		        var uid = firebase.auth().currentUser.uid;
+		        var reqCount = firebase.database().ref('users/' + uid + '/requirements');
+		        reqCount.on('value', function(snapshot) {
+		          var lst = [];
+		          snapshot.forEach(function(childSnapshot) {
+		               var key = childSnapshot.key;
+		               var item = childSnapshot.val();
+		               lst.push(key);
+		               lst.push(item);
+		          });
+		          document.getElementById('req').textContent = lst;
+		        });
+		        // document.getElementById("demo").innerHTML = firebase.database().ref('/users/' + userId).once('value').then(function(snapshot) {
+		        //     var username = (snapshot.val() && snapshot.val().requirements) || 'Anonymous';
+		        // });
+		        // console.log('called');
+		    }
+		  </script>
+
+
 	</head>
 	<body class="is-preload">
 
@@ -21,8 +191,8 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Jane Doe</h1>
-							<p>Senior Psychonautics Engineer</p>
+							<h1 id="name">Jane Doe</h1>
+							<p id="req"></p>
 						</header>
 						<!--
 						<hr />
@@ -63,9 +233,7 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-twitter">Twitter</a></li>
-								<li><a href="#" class="fa-instagram">Instagram</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
+								<li id="quickstart-sign-in"><a href="#" class="signin">Sign In</a></li>
 							</ul>
 						</footer>
 					</section>
